# revanced-apks.github.io

./: Cargo.toml  Dioxus.toml
.github/workflows/: deploy.yml
assets/: main.css  tailwind.css
src/: components.rs  main.rs  utils.rs
src/components/: icons.rs  release.rs
