[package]
name = "revanced-apks"
version = "0.1.0"
authors = ["Mohammed Rabil <rabil@techie.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.115"
serde = "1.0.197"
async-recursion = "1.1.0"
futures = "0.3.30"
